# memfd-runner

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release-plz.yml
src/: lib.rs  syscalls.rs
tests/: bonjour  main.c
